Begin work on an oauth2 provider

--- a/test/OpenLDAP/slapd.conf
+++ b/test/OpenLDAP/slapd.conf
@@ -4,6 +4,7 @@ include		schema/inetorgperson.schema
 include		schema/misc.schema
 include		schema/openldap.schema
 include		schema/nis.schema
+include		schema/oidc-schema.schema
 
 pidfile		slapd.pid
 argsfile	slapd.args
