--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ flask-ldap3-login>=0.9.12
 flask-login>=0.4.0
 ipython>=5.1.0
 -e git+https://github.com/cannatag/ldap3.git@0b3dcf4ea37735766ce116030259291ee4b8f548#egg=ldap3-2.2.1.0b3dcf4ea
+flask_oauthlib>=0.9.3
