chore: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-Flask-Script>=2.0.5
-Flask>=0.12
-flask-ldap3-login>=0.9.12
-flask-login>=0.4.0
-ipython>=5.1.0
--e git+https://github.com/cannatag/ldap3.git@0b3dcf4ea37735766ce116030259291ee4b8f548#egg=ldap3-2.2.1.0b3dcf4ea
-flask_oauthlib>=0.9.3
-flask_bootstrap>=3.3.7
+Flask-HTTPAuth>=3.2.4
+Flask-Mail>=0.9.1
+Flask-Migrate>=2.4.0
+Flask-SQLAlchemy>=2.3
+Flask-Script>=2.0.6
+Flask>=1.0.2
+SQLAlchemy>=1.2.18
 flask-cache>=0.13.1
-Flask-SQLAlchemy>=2.1
-Flask-Mail>=0.9.0
-Flask-Migrate>=2.0.3
-Flask-HTTPAuth>=3.2.2
-SQLAlchemy>=1.1.6
+flask-ldap3-login>=0.9.16
+flask-login>=0.4.1
+flask_bootstrap>=3.3.7
+flask_oauthlib>=0.9.5
+ipython>=7.3.0
+ldap3>=2.5.2
+requests-oauthlib==1.1.0
