--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ before_install:
 - docker-compose build
 - docker-compose up -d
 
+install:
+- "export AUTH_PORT=$(docker-compose port auth 80 | cut -d: -f2)"
+
 script:
-- curl -L http://$(docker-compose port auth 80)
+- curl -L http://localhost:${AUTH_PORT}
 - black --check --diff .
 
 after_script:
