--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask-SQLAlchemy>=2.3
 Flask-Script>=2.0.6
 Flask>=1.0.2
 SQLAlchemy>=1.2.18
-flask-cache>=0.13.1
+flask-caching>=1.9
 flask-ldap3-login>=0.9.16
 flask-login>=0.4.1
 flask_bootstrap>=3.3.7
