Debrand: add the branding config variable

--- a/docker/test.conf
+++ b/docker/test.conf
@@ -5,8 +5,8 @@ BOOTSTRAP_SERVE_LOCAL = True
 # LDAP
 LDAP_HOST = 'openldap'
 LDAP_PORT = 389
-LDAP_BASE_DN = 'dc=zapf,dc=in'
-LDAP_BIND_USER_DN = 'uid=zapf-auth,dc=zapf,dc=in'
+LDAP_BASE_DN = 'dc=example,dc=com'
+LDAP_BIND_USER_DN = 'uid=auth,dc=example,dc=com'
 LDAP_BIND_USER_PASSWORD = 'test'
 import ldap3
 PASSWORD_HASHING_FUNC = ldap3.HASHED_SALTED_SHA
@@ -21,7 +21,7 @@ MAIL_SERVER='smtp.example.org'
 MAIL_PORT=465
 MAIL_USE_TLS = False
 MAIL_USE_SSL=True
-MAIL_USERNAME='zapf-auth-sender'
+MAIL_USERNAME='auth-sender'
 MAIL_PASSWORD='CHANGEME'
 
 # To prevent open redirects in OAuth logout
