--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   openldap:
     image: osixia/openldap
     environment:
-      LDAP_ORGANISATION: "ZaPF"
-      LDAP_DOMAIN: "zapf.in"
+      LDAP_ORGANISATION: "Example Org."
+      LDAP_DOMAIN: "example.com"
       LDAP_BACKEND: "mdb"
     expose:
       - "389"
@@ -22,9 +22,9 @@ services:
     command: --copy-service
   auth:
     build: .
-    image: zapf-auth:latest
+    image: auth:latest
     ports:
-      - "80"
+      - "5000:80"
     volumes:
       - type: bind
         source: ./docker/auth.conf
